<resources>
    <string name="app_name">Record Time</string>
    <string name="month_fragment">month_fragment</string>
    <string name="fuu">1</string>
    <string name="month">11月</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">date</string>
    <string name="back"><![CDATA[<<]]></string>
    <string name="post"><![CDATA[>>]]></string>
    <string name="selected_date">1</string>
    <string name="time_view_holder">time_view_holder</string>

    <string name="only_time_title">時間のみ記録する</string>
    <string name="note"><![CDATA[※]]> 後から更新できます。</string>
    <string name="ok">OK</string>

    <string name="with_time_title">名前を付けて記録する</string>
    <string name="hint">登録する内容を入力してください。</string>
    <string name="detail_title">時間とタイトルを記録する</string>
    <string name="start">開始</string>
    <string name="end">終了</string>

    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="sunday">日</string>
    <string name="saturday">土</string>
    <string name="friday">金</string>
    <string name="thursday">木</string>
    <string name="wednesday">水</string>

    <!--  更新モーダル  -->
    <string name="update_or_delete_title">更新 / 削除</string>
    <string name="update_date_title">日付</string>
    <string name="update_time_title">時間</string>
    <string name="update_time">13:50</string>
    <string name="update_title_title">タイトル</string>
    <string name="update_date">2024 年 2 / 26</string>
    <string name="update_button">更新</string>
    <string name="delete_button">削除</string>
</resources>