<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/modal"
    android:layout_width="320dp"
    android:layout_height="320dp"
    android:layout_gravity="center"
    android:background="@drawable/modal"
    tools:context=".ModalFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/contents"
            android:layout_width="270dp"
            android:layout_height="150dp"
            android:layout_above="@+id/liner_layout"
            android:layout_alignParentEnd="true"
            android:layout_margin="40dp"
            android:autofillHints="no"
            android:background="@drawable/border_modal"
            android:gravity="top|left"
            android:hint="@string/hint"
            android:inputType="textMultiLine"
            android:padding="18dp"
            android:textSize="18dp" />

        <LinearLayout
            android:id="@+id/liner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:gravity="center|bottom">

            <Button
                android:id="@+id/start"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:onClick="registration_start"
                android:text="@string/start"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/end"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:onClick="registration_end"
                android:text="@string/end"
                android:textColor="@color/white" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

    </RelativeLayout>

</FrameLayout>